--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,14 @@ environment:
   sdk: ">=3.0.0 <4.0.0"
 dependencies:
   hashed_kv_store:
-    path: ../hashed_kv_store
+    git:
+      url: https://github.com/fl-start/hashed_kv_store
   parallel_dio_pool:
-    path: ../parallel_dio_pool
+    git:
+      url: https://github.com/fl-start/parallel_dio_pool
   multi_identity_drift:
-    path: ../multi_identity_drift
+    git:
+      url: https://github.com/fl-start/multi_identity_drift
   drift: ^2.14.0
   dio: ^5.5.0
   signals: ^1.5.0
